endpoint cadastrar localizacao, juntamente com congiguracoes de api externa

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL=postgresql://USUARIO:SENHA@localhost:5432/BANCO?schema=public
 
-PORT="3000"
+PORT=3000
 
-JWT_KEY=
+JWT_KEY="SUA CHAVE KEY"
+ENDPOINT_MAPS=https://api.opencagedata.com/geocode/v1/json?q
+API_MAPS_KEY="SUA CHAVE KEY"
