--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cep-promise": "^4.4.0",
     "date-fns": "^2.30.0",
